src/objects/fflib_AppBinding__mdt.object
<CustomObject>
    <label>Application Binding</label>
    <pluralLabel>Application Bindings</pluralLabel>
    <fields>
        <fullName>BindingObjectAlternate__c</fullName>
        <description>Use this field to specify the SObject API name to bind to when the &quot;Binding Object&quot; field does not list that particular SObject.  Only specify the &quot;Binding Object&quot; field or this one; not both.</description>
        <inlineHelpText>Use this field to specify the SObject API name to bind to when the &quot;Binding Object&quot; field does not list that particular SObject.  Only specify the &quot;Binding Object&quot; field or this one; not both.</inlineHelpText>
        <label>Binding Object Alternate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BindingObject__c</fullName>
        <label>Binding Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>BindingObjects</relationshipLabel>
        <relationshipName>BindingObjects</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>BindingSequence__c</fullName>
        <label>Binding Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImplementationType__c</fullName>
        <label>Implementation Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterfaceType__c</fullName>
        <label>Interface Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharingMode__c</fullName>
        <defaultValue>&quot;With Sharing&quot;</defaultValue>
        <label>Sharing mode</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>With Sharing</fullName>
                    <default>true</default>
                    <label>With Sharing</label>
                </value>
                <value>
                    <fullName>Without Sharing</fullName>
                </value>
                <value>
                    <fullName>Inherited Sharing</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Type of binding or Logical layers of functionality</inlineHelpText>
        <label>Binding Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domain</fullName>
                    <default>true</default>
                    <label>Domain</label>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Selector</fullName>
                </value>
                <value>
                    <fullName>Controller</fullName>
                </value>
                <value>
                    <fullName>Module</fullName>
                </value>
                <value>
                    <fullName>EventListener</fullName>
                    <label>Event Listener</label>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>BindingObject__c</columns>
        <columns>BindingObjectAlternate__c</columns>
        <columns>BindingSequence__c</columns>
        <columns>InterfaceType__c</columns>
        <columns>ImplementationType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <validationRules>
        <fullName>BindObj_Or_BindObjAlt</fullName>
        <active>true</active>
        <description>This validation rule ensures that only the &quot;Binding Object&quot; or the &quot;Binding Object Alternate&quot; field is specified and not both.</description>
        <errorConditionFormula>NOT( ISBLANK( BindingObject__c ) ) &amp;&amp; NOT( ISBLANK( BindingObjectAlternate__c ) )</errorConditionFormula>
        <errorMessage>Only specify the &quot;Binding Object&quot; field or the &quot;Binding Object Alternate&quot; field; not both.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Interface_Type_For_Services</fullName>
        <active>true</active>
        <description>An Interface Type is required for Service class Bindings</description>
        <errorConditionFormula>AND(ISPICKVAL(Type__c,&quot;Service&quot;), ISBLANK( InterfaceType__c ) )</errorConditionFormula>
        <errorDisplayField>ImplementationType__c</errorDisplayField>
        <errorMessage>An Interface Type is required for Service class Bindings</errorMessage>
    </validationRules>
</CustomObject>